# dashgo-rl-navigation

./: .gitignore  CLAUDE.md  QUICK_REFERENCE.md  README.md  README_GITHUB.md  auto_analyze.py  auto_train_launcher.sh  backup_training_artifacts.sh  check_config.py  check_lidar.py  connect_to_robot.sh  dashgo_assets.py  dashgo_config.py  dashgo_env_v2.py  debug_play.py  debug_system_check.py  diagnose_lidar_detailed.py  export_onnx.py  export_to_ros.py  export_torchscript.py  geo_distill_node.py  geo_nav_policy.py  geo_nav_policy_deployment_backup.py  play.py  quick_lidar_check.py  quickstart_deploy.sh  ros_yaml_fix.md  run_headless_train.sh  run_real.sh  run_robot.py  run_safe.sh  run_sim.sh  safety_filter.py  start_claude.sh  train_cfg_v2.yaml  train_v2.py  verify_collision.py  verify_complete_v3.py  verify_lidar.py  verify_lidar_fix.py  (+2 more)
catkin_ws/src/dashgo_rl/: CMakeLists.txt
catkin_ws/src/dashgo_rl/launch/: geo_nav.launch  real_control.launch  sim2real_amcl.launch  sim2real_golden.launch
catkin_ws/src/dashgo_rl/maps/: empty_map.yaml  nav.pgm
catkin_ws/src/dashgo_rl/meshes/: README.txt
catkin_ws/src/dashgo_rl/param/: base_local_planner_dwa_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
catkin_ws/src/dashgo_rl/rviz/: nav.rviz
catkin_ws/src/dashgo_rl/scripts/: DIAGNOSTIC_GUIDE.md  README_optimized.md  USAGE_optimized.md  geo_nav_node.py  geo_nav_verify.py.backup_20260130_000429  geo_nav_verify_optimized.py
catkin_ws/src/dashgo_rl/urdf/: dashgo_d1_sim.urdf.xacro
catkin_ws/src/dashgo_rl/worlds/: navigation_env.world
config/: dashgo.urdf
(+462 files in other folders)
